@@ -1,6 +1,7 @@
 0.17.8
 	bugfix: properly delete objects with linked ports (ticket:300)
 	bugfix: completely remove warnings caused by ticket:277 (by Jason Lifsey)
+	update: restore PortCompat editor functionality (ticket:263)
 0.17.7 2009-11-09
 	bugfix: work around unbuffered query in ports pop-up (ticket:297)
 	update: add inline mode switcher by Jens Groh (ticket:298)
